--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-123456789
+12345678910
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +9,7 @@
 </head>
 <body>
    <h1>This is a Header</h1>
-   <p>This is a paragraph</p> 
+   <p>This is a paragraph</p>
+   <p>This is a second paragraph</p>
 </body>
 </html>
